bd-temp-prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bd-prd-temp-api
  namespace: bd-prd
spec:
  selector:
    matchLabels:
      app: bd-prd-temp-api
  replicas: 0
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: bd-prd-temp-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - mysql
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: bd-prd-temp-api
          image: quay.io/bot_detector/bd-temp-api:47f2c7c
          resources:
            requests:
              cpu: 1
            limits:
              cpu: 2
          ports:
            - name: prd-api-port
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: prd-api-port
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: prd-api-port
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 3
            timeoutSeconds: 5
